# archive-md-urls

./: .flake8  .gitignore  Makefile  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg
archive-md-urls/: cli.py  scan_md.py  update_files.py
src/archive_md_urls/: cli.py  gather_snapshots.py  scan_md.py  update_files.py
tests/: test_cli.py  test_gather_snapshots.py  test_scan_md.py  test_update_files.py  testfiles.py
tests/test_data/: 2014-04-28-fake-blogpost-no-meta.md  2014-04-28-fake-blogpost.md  2014-04-28-fake-blogpost_converted_urls.md  2014-04-28-fake-blogpost_yaml.md  fake-blogpost-no-filename-date.md
tests/test_data/subdir/: empty_testfile.md
