[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archive-md-urls"
version = "0.0.7"
license = { file="LICENSE" }
authors = [{name = "Stefan Baack"}]
description = "Turn URLs in Markdown files into archive.org snapshots"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "markdown >= 3.3",
    "beautifulsoup4 >= 4",
    "httpx >= 0.18, < 1.0",
    "tenacity >= 8",
    "python-dateutil >= 2.8",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/sbaack/archive-md-urls"
"Bug Tracker" = "https://github.com/sbaack/archive-md-urls/issues"

[project.scripts]
archive-md-urls = "archive_md_urls.cli:main"

[tool.hatch.envs.tests.scripts]
test = "python -m unittest"

[[tool.hatch.envs.tests.matrix]]
python = ["39", "310", "311"]
