[metadata]
name = archive-md-urls
version = 0.0.6
license = GPL-3.0
license_files= LICENSE
author = Stefan Baack
description = Turn URLs in Markdown files into archive.org snapshots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbaack/archive-md-urls
project_urls =
    Bug Tracker = https://github.com/sbaack/archive-md-urls/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    markdown >= 3.3
    beautifulsoup4 >= 4
    httpx >= 0.18, < 1.0
    tenacity >= 8
    python-dateutil >= 2.8

[options.extras_require]
dev =
    # Setuptools' building and publishing packages
    build >= 0.5
    twine >= 3.4
    # pip-tools to manage pinned versions
    pip-tools

[options.entry_points]
console_scripts =
    archive-md-urls = archive_md_urls.cli:main

[options.packages.find]
where = src 

[flake8]
max-line-length = 88
extend_ignore =
    # No type annotations for 'self' (flake-annotations)
    ANN101
